<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RSASignViewController" customModule="RSASign_Sample_Swift" customModuleProvider="target">
            <connections>
                <outlet property="textSignature" destination="4J3-sY-gmu" id="Njp-a1-n7l"/>
                <outlet property="view" destination="dGy-ny-slk" id="cJ8-wA-noa"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="dGy-ny-slk">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gO6-vw-5mn">
                    <rect key="frame" x="20" y="214" width="374" height="50"/>
                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="btnGetPubKey"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="h5N-16-HVP"/>
                    </constraints>
                    <state key="normal" title="Get public key">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </state>
                    <connections>
                        <action selector="actionBtnGetPubKey:" destination="-1" eventType="touchUpInside" id="7wt-WH-Pcb"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gKc-bj-Cjw">
                    <rect key="frame" x="20" y="484" width="374" height="50"/>
                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="btnDelKey"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="BYz-CP-iiG"/>
                    </constraints>
                    <state key="normal" title="Delete RSA key">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </state>
                    <connections>
                        <action selector="actionBtnDelKey:" destination="-1" eventType="touchUpInside" id="YQd-hq-2RX"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1GG-hf-stv">
                    <rect key="frame" x="20" y="424" width="374" height="50"/>
                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="btnVerifySign"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="koY-Xe-ox7"/>
                    </constraints>
                    <state key="normal" title="Verify signature">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </state>
                    <connections>
                        <action selector="actionBtnVerifySign:" destination="-1" eventType="touchUpInside" id="8sd-QB-TQ1"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lPn-dt-xcY">
                    <rect key="frame" x="20" y="274" width="374" height="50"/>
                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="btnCreateSign"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="Ucc-Yb-8QG"/>
                    </constraints>
                    <state key="normal" title="Create signature">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </state>
                    <connections>
                        <action selector="actionBtnCreateSign:" destination="-1" eventType="touchUpInside" id="ZwT-78-EHi"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ee-TQ-Od7">
                    <rect key="frame" x="20" y="154" width="374" height="50"/>
                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="btnGenKey"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="p65-Xy-g1w"/>
                    </constraints>
                    <state key="normal" title="Generate RSA key">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </state>
                    <connections>
                        <action selector="actionBtnGenKey:" destination="-1" eventType="touchUpInside" id="8oI-XY-QWM"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FMo-Nx-zoF">
                    <rect key="frame" x="20" y="94" width="374" height="50"/>
                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="btnVersion"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="MIo-VE-D04"/>
                    </constraints>
                    <state key="normal" title="Get library version">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </state>
                    <connections>
                        <action selector="actionBtnVersion:" destination="-1" eventType="touchUpInside" id="TGE-9I-U73"/>
                    </connections>
                </button>
                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4J3-sY-gmu">
                    <rect key="frame" x="20" y="334" width="374" height="80"/>
                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="textSignature"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="80" id="xbf-XY-W68"/>
                    </constraints>
                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                    <connections>
                        <outlet property="delegate" destination="-1" id="nru-iv-HYh"/>
                    </connections>
                </textView>
            </subviews>
            <viewLayoutGuide key="safeArea" id="gcK-dq-nU0"/>
            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
            <constraints>
                <constraint firstItem="0ee-TQ-Od7" firstAttribute="top" secondItem="FMo-Nx-zoF" secondAttribute="bottom" constant="10" id="2Td-HX-egb"/>
                <constraint firstItem="lPn-dt-xcY" firstAttribute="top" secondItem="gO6-vw-5mn" secondAttribute="bottom" constant="10" id="4QV-cq-45F"/>
                <constraint firstItem="1GG-hf-stv" firstAttribute="leading" secondItem="gcK-dq-nU0" secondAttribute="leading" constant="20" id="6Re-Al-nL0"/>
                <constraint firstItem="gcK-dq-nU0" firstAttribute="trailing" secondItem="gKc-bj-Cjw" secondAttribute="trailing" constant="20" id="82q-LI-Um5"/>
                <constraint firstItem="gcK-dq-nU0" firstAttribute="trailing" secondItem="0ee-TQ-Od7" secondAttribute="trailing" constant="20" id="A5s-Rn-XMh"/>
                <constraint firstItem="gKc-bj-Cjw" firstAttribute="leading" secondItem="gcK-dq-nU0" secondAttribute="leading" constant="20" id="QpN-pz-GTU"/>
                <constraint firstItem="gKc-bj-Cjw" firstAttribute="top" secondItem="1GG-hf-stv" secondAttribute="bottom" constant="10" id="Wh9-i6-jn2"/>
                <constraint firstItem="gcK-dq-nU0" firstAttribute="trailing" secondItem="lPn-dt-xcY" secondAttribute="trailing" constant="20" id="ZTs-zl-0vk"/>
                <constraint firstItem="gO6-vw-5mn" firstAttribute="top" secondItem="0ee-TQ-Od7" secondAttribute="bottom" constant="10" id="Zra-Jd-Lfd"/>
                <constraint firstItem="gO6-vw-5mn" firstAttribute="leading" secondItem="gcK-dq-nU0" secondAttribute="leading" constant="20" id="eCF-dc-his"/>
                <constraint firstItem="gcK-dq-nU0" firstAttribute="trailing" secondItem="gO6-vw-5mn" secondAttribute="trailing" constant="20" id="gkM-Hg-k7b"/>
                <constraint firstItem="gcK-dq-nU0" firstAttribute="trailing" secondItem="1GG-hf-stv" secondAttribute="trailing" constant="20" id="iwa-SY-ud8"/>
                <constraint firstItem="FMo-Nx-zoF" firstAttribute="leading" secondItem="gcK-dq-nU0" secondAttribute="leading" constant="20" id="mFk-o7-0i0"/>
                <constraint firstItem="lPn-dt-xcY" firstAttribute="leading" secondItem="gcK-dq-nU0" secondAttribute="leading" constant="20" id="p56-sP-fhI"/>
                <constraint firstItem="1GG-hf-stv" firstAttribute="top" secondItem="4J3-sY-gmu" secondAttribute="bottom" constant="10" id="r5V-3a-8zv"/>
                <constraint firstItem="4J3-sY-gmu" firstAttribute="leading" secondItem="gcK-dq-nU0" secondAttribute="leading" constant="20" id="rU4-Ul-jgu"/>
                <constraint firstItem="gcK-dq-nU0" firstAttribute="trailing" secondItem="FMo-Nx-zoF" secondAttribute="trailing" constant="20" id="wzH-l1-tth"/>
                <constraint firstItem="0ee-TQ-Od7" firstAttribute="leading" secondItem="gcK-dq-nU0" secondAttribute="leading" constant="20" id="y1P-wj-KnB"/>
                <constraint firstItem="FMo-Nx-zoF" firstAttribute="top" secondItem="gcK-dq-nU0" secondAttribute="top" constant="50" id="yLg-ue-Iri"/>
                <constraint firstItem="4J3-sY-gmu" firstAttribute="top" secondItem="lPn-dt-xcY" secondAttribute="bottom" constant="10" id="ye2-7k-Ayl"/>
                <constraint firstItem="gcK-dq-nU0" firstAttribute="trailing" secondItem="4J3-sY-gmu" secondAttribute="trailing" constant="20" id="zj0-hB-7ql"/>
            </constraints>
            <point key="canvasLocation" x="32" y="161"/>
        </view>
    </objects>
</document>
